@@ -15,6 +15,7 @@
 #include "Apps/WatchFaces/Lcars.h"
 #include "Apps/WatchFaces/LogoFace.h"
 #include "Apps/WatchFaces/DeusEx.h"
+#include "Apps/WatchFaces/Mosaic.h"
 
 class Watches : public App {
 
@@ -40,9 +41,9 @@ class Watches : public App {
 
 	protected:
 
-		const int FACES = 9;
+		const int FACES = 10;
 
-		WatchFace *clockFaces[10];
+		WatchFace *clockFaces[11];
 		int8_t currentFace = 6;
 
 		InfoPanel *infoPanel;
@@ -58,6 +59,7 @@ class Watches : public App {
 			clockFaces[7] = new Vaporwave();
 			clockFaces[8] = new Lcars();
 			clockFaces[9] = new DeusEx();
+			clockFaces[10] = new Mosaic();
 		}
 
 };
