@@ -5,6 +5,7 @@ cyberWatch 1:2
 - FEATURE: lcars watch face
 - FEATURE: logo watch face
 - FEATURE: DeusEx watch face
+- FEATURE: mosaic watch face
 - REFACTOR: moved all watch faces into apps directory from userinterface
 - REFACTOR: used defines for resolution width annd height instead tft->width() / height() calls
 - REDACTOR: redesign analog watch face
